@@ -2,11 +2,11 @@ useDynLib(QTLRel)
 
 export(aicVC,mAIC,
 	blup,estVC,fv,
-	scanOne,gvar,qtlVar,nullSim,
+	scanOne,scanTwo,gvar,qtlVar,nullSim,
 	lodci,.lodci,
 	genoProb,genoImpute,genoPos,rem,
 	pedRecode,hapSim,genoSim,
-	pkolm,qkolm,qqPlot,plotit,
+	pkolm,qkolm,qqPlot,plotit,plot.scanTwo,
    cic,kinship,genMatrix)
 
 importFrom(gdata, "reorder.factor")
@@ -18,6 +18,7 @@ S3method(blup, bgv)
 S3method(estVC, default)
 S3method(genoProb, default)
 S3method(plot, scanOne)
+S3method(plot, scanTwo)
 S3method(print, aic)
 S3method(print, bgv)
 
@@ -25,6 +26,6 @@ S3method(print, bgv)
 S3method(print, scanOne)
 S3method(qqPlot, default)
 S3method(scanOne, default)
-S3method(scanOne, default)
+S3method(scanTwo, default)
 
 
