@@ -1,4 +1,6 @@
 
+2011/4/14 add function 'scanTwo'.
+
 2011/3/22 resolve the problem of 'long long' type on some platforms.
 
 2011/3/16 resolve the problem of fopen64 and fseeko64 to enable installation on macosx and solaris systems.
